init migration added and fake data configs

--- a/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.json
+++ b/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BlazorSozlukDbConnectionString": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+
 }
