--- a/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.json
+++ b/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AuthConfig": {
+    "Secret": "TechBuddyShouldBeLong"
+  },
   "BlazorSozlukDbConnectionString": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
 
 }
