--- a/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.Development.json
+++ b/src/Api/WebApi/BlazorSozluk.WebApi/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "BlazorSozlukDbConnectionString": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+
 }
