CRUD operations added

--- a/src/Api/Core/BlazorSozluk.Api.Application/BlazorSozluk.Api.Application.csproj
+++ b/src/Api/Core/BlazorSozluk.Api.Application/BlazorSozluk.Api.Application.csproj
@@ -23,6 +23,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Commands\Entry\CreateFav\" />
+    <Folder Include="Features\Commands\Entry\CreateVote\" />
+    <Folder Include="Features\Commands\Entry\Create\" />
+    <Folder Include="Features\Commands\Entry\DeleteFav\" />
+    <Folder Include="Features\Commands\Entry\DeleteVote\" />
     <Folder Include="Features\Queries\" />
   </ItemGroup>
 
