--- a/src/Api/Core/BlazorSozluk.Api.Domain/BlazorSozluk.Api.Domain.csproj
+++ b/src/Api/Core/BlazorSozluk.Api.Domain/BlazorSozluk.Api.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\EntryComment - Kopyala.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Common\BlazorSozluk.Common\BlazorSozluk.Common.csproj" />
   </ItemGroup>
 
