worker service added

--- a/src/Projections/BlazorSozluk.Projections.VoteService/appsettings.json
+++ b/src/Projections/BlazorSozluk.Projections.VoteService/appsettings.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    "SqlServer": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
   }
 }
