--- a/src/Projections/BlazorSozluk.Projections.FavoriteService/appsettings.json
+++ b/src/Projections/BlazorSozluk.Projections.FavoriteService/appsettings.json
@@ -3,6 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    "SqlServer": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+
   }
 }
