--- a/src/Projections/BlazorSozluk.Projections.VoteService/appsettings.json
+++ b/src/Projections/BlazorSozluk.Projections.VoteService/appsettings.json
@@ -4,6 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     },
-    "SqlServer": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+    "ConnectionStrings": {
+      "SqlServer": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+    }
   }
 }
