--- a/src/Projections/BlazorSozluk.Projections.UserService/appsettings.json
+++ b/src/Projections/BlazorSozluk.Projections.UserService/appsettings.json
@@ -3,6 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    "ConnectionStrings": {
+      "SqlServer": "Data Source=DESKTOP-CED7FJ6;Initial Catalog=BlazorSozluk;User ID=hamza;Password=12345"
+    },
+    "ConfirmationLinkBase": "https://localhost:7071/api/user/confirm?id="
   }
 }
